@@ -1,3 +1,7 @@
+2006-08-20  Marcus Meissner  <marcus@jet.franken.de>
+	
+	* library.c: Do not download 0 sized objects.
+
 2006-08-10  Marcus Meissner  <marcus@jet.franken.de>
 	
 	* Added alternate iRiver H10 id, reported by Scott Call.
